@@ -635,6 +635,7 @@ All (GUI):
 - Implement clipping for wxSVGFileDC (Steve Benbow).
 - Add wxDirCtrl::GetPath() (troelsk).
 - Add wxEVT_DIRCTRL_SELECTIONCHANGED event (troelsk).
+- Add wxEVT_DIRCTRL_FILEACTIVATED event (troelsk).
 - Add wxControl::GetSizeFromTextSize() (Manuel Martin).
 - Optionally allow showing tooltips for disabled ribbon buttons (wxBen).
 - Add wxTL_NO_HEADER style to wxTreeListCtrl (robboto).
